wrap bug fixed

--- a/src/styles/BadgeData.scss
+++ b/src/styles/BadgeData.scss
@@ -93,6 +93,7 @@ max-width: 300px;
             &__item{
                 font-weight: 700;
                 font-size: 1.4rem;
+                white-space: normal;
                 &--info{
                     margin-left: 10px;
                     font-weight: 700;
